# submission

./: Justfile  README.org  cabal.project  flake.nix  generate.awk  generate.sh  submission.cabal
app/: Main.hs
