cabal-version:      3.4
name:               submission
version:            0.1.0.0
synopsis:           A Haskell program submitted to AtCoder
-- description:
license:            NONE
author:             submitter-anonymous
maintainer:         NONE
-- copyright:
category:           Competitive
build-type:         Simple
-- extra-doc-files:    CHANGELOG.md
-- extra-source-files:
common warnings
    ghc-options: -Wall
flag atcoder
    description:    Indicates this is on the AtCoder judge server
    default:        False
    manual:         True
executable main
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
                  Cabal,
                  Cabal-syntax,
                  OneTuple,
                  QuickCheck,
                  StateVar,
                  ac-library-hs,
                  adjunctions,
                  ansi-terminal,
                  ansi-terminal-types,
                  array,
                  assoc,
                  atomic-primops,
                  attoparsec,
                  attoparsec,
                  base,
                  base-orphans,
                  bifunctors,
                  binary,
                  bitvec,
                  blaze-builder,
                  blaze-html,
                  blaze-markup,
                  bytestring,
                  call-stack,
                  case-insensitive,
                  charset,
                  clock,
                  colour,
                  comonad,
                  containers,
                  contravariant,
                  data-default,
                  data-default-class,
                  deepseq,
                  directory,
                  distributive,
                  exceptions,
                  extra,
                  fgl,
                  filepath,
                  fingertree,
                  foldl,
                  free,
                  ghc-bignum,
                  ghc-boot-th,
                  ghc-prim,
                  hashable,
                  heaps,
                  hmatrix,
                  ilist,
                  indexed-traversable,
                  indexed-traversable-instances,
                  integer-gmp,
                  integer-logarithms,
                  invariant,
                  kan-extensions,
                  lens,
                  linear-base,
                  linear-generics,
                  list-t,
                  logict,
                  massiv,
                  math-functions,
                  megaparsec,
                  mmorph,
                  monad-control,
                  monad-memo,
                  mono-traversable,
                  mtl,
                  mutable-containers,
                  mwc-random,
                  os-string,
                  parallel,
                  parsec,
                  parsers,
                  parser-combinators,
                  prettyprinter,
                  prettyprinter-ansi-terminal,
                  pretty,
                  primitive,
                  process,
                  profunctors,
                  psqueues,
                  pvar,
                  random,
                  reducers,
                  reflection,
                  regex-base,
                  regex-tdfa,
                  safe-exceptions,
                  scheduler,
                  scientific,
                  semialign,
                  semigroupoids,
                  semigroups,
                  splitmix,
                  split,
                  stm,
                  storable-complex,
                  storable-record,
                  storable-tuple,
                  strict,
                  strict-lens,
                  tagged,
                  template-haskell,
                  text,
                  tf-random,
                  these,
                  these-lens,
                  th-abstraction,
                  time,
                  transformers,
                  transformers-base,
                  transformers-compat,
                  trifecta,
                  unboxing-vector,
                  unix,
                  unliftio-core,
                  unordered-containers,
                  utf8-string,
                  utility-ht,
                  vector,
                  vector-algorithms,
                  vector-split,
                  vector-stream,
                  vector-th-unbox,
                  void,
                  wide-word,
                  witherable,
                  xhtml

    hs-source-dirs:   app
    default-language: GHC2021
    if flag(atcoder)
      cpp-options: -DATCODER
