cabal-version: 3.4
name:          submission
version:       0.1.0.0
synopsis:      A Haskell program submitted to AtCoder

-- description:
license:
author:        submitter-anonymous
maintainer:    NONE

-- copyright:
category:      Competitive
build-type:    Simple

-- extra-doc-files:    CHANGELOG.md
-- extra-source-files:
common warnings
  ghc-options: -Wall

flag atcoder
  description: Indicates this is on the AtCoder judge server
  default:     False
  manual:      True

executable main
  import:           warnings
  main-is:          Main.hs

  -- other-modules:
  -- other-extensions:
  build-depends:
    , ac-library-hs                  ^>=1.1.0.0
    , adjunctions                    ^>=4.4.2
    , ansi-terminal                  ^>=1.1.2
    , ansi-terminal-types            ^>=1.1
    , array                          ^>=0.5.8.0
    , assoc                          ^>=1.1.1
    , atomic-primops                 ^>=0.8.8
    , attoparsec                     ^>=0.14.4
    , base                           ^>=4.19.2.0
    , base-orphans                   ^>=0.9.3
    , bifunctors                     ^>=5.6.2
    , binary                         ^>=0.8.9.1
    , bitvec                         ^>=1.1.5.0
    , blaze-builder                  ^>=0.4.2.3
    , blaze-html                     ^>=0.9.2.0
    , blaze-markup                   ^>=0.8.3.0
    , bytestring                     ^>=0.12.1.0
    , Cabal                          ^>=3.10.3.0
    , Cabal-syntax                   ^>=3.10.3.0
    , call-stack                     ^>=0.4.0
    , case-insensitive               ^>=1.2.1.0
    , charset                        ^>=0.3.11
    , clock                          ^>=0.8.4
    , colour                         ^>=2.3.6
    , comonad                        ^>=5.0.9
    , containers                     ^>=0.6.8
    , contravariant                  ^>=1.5.5
    , data-default                   ^>=0.8.0.0
    , data-default-class             ^>=0.2.0.0
    , deepseq                        ^>=1.5.1.0
    , directory                      ^>=1.3.8.5
    , distributive                   ^>=0.6.2.1
    , exceptions                     ^>=0.10.7
    , extra                          ^>=1.8
    , fgl                            ^>=5.8.3.0
    , filepath                       ^>=1.4.301.0
    , fingertree                     ^>=0.1.5.0
    , foldl                          ^>=1.4.18
    , free                           ^>=5.2
    , ghc-bignum                     ^>=1.3
    , ghc-boot-th                    ^>=9.8.4
    , ghc-prim                       ^>=0.11.0
    , hashable                       ^>=1.5.0.0
    , heaps                          ^>=0.4.1
    , hmatrix                        ^>=0.20.2
    , ilist                          ^>=0.4.0.1
    , indexed-traversable            ^>=0.1.4
    , indexed-traversable-instances  ^>=0.1.2
    , integer-gmp                    ^>=1.1
    , integer-logarithms             ^>=1.0.4
    , invariant                      ^>=0.6.4
    , kan-extensions                 ^>=5.2.6
    , lens                           ^>=5.3.3
    , linear-base                    ^>=0.4.0
    , linear-generics                ^>=0.2.3
    , list-t                         ^>=1.0.5.7
    , logict                         ^>=0.8.2.0
    , massiv                         ^>=1.0.4.0
    , math-functions                 ^>=0.3.4.4
    , megaparsec                     ^>=9.7.0
    , mmorph                         ^>=1.2.0
    , monad-control                  ^>=1.0.3.1
    , monad-memo                     ^>=0.5.4
    , mono-traversable               ^>=1.0.21.0
    , mtl                            ^>=2.3.1
    , mutable-containers             ^>=0.3.4.1
    , mwc-random                     ^>=0.15.1.0
    , OneTuple                       ^>=0.4.2
    , os-string                      ^>=2.0.7
    , parallel                       ^>=3.2.2.0
    , parsec                         ^>=3.1.17.0
    , parser-combinators             ^>=1.3.0
    , parsers                        ^>=0.12.12
    , pretty                         ^>=1.1.3.6
    , prettyprinter                  ^>=1.7.1
    , prettyprinter-ansi-terminal    ^>=1.1.3
    , primitive                      ^>=0.9.0.0
    , process                        ^>=1.6.25.0
    , profunctors                    ^>=5.6.2
    , psqueues                       ^>=0.2.8.0
    , pvar                           ^>=1.0.0.0
    , QuickCheck                     ^>=2.15.0.1
    , random                         ^>=1.2.1.3
    , reducers                       ^>=3.12.5
    , reflection                     ^>=2.1.9
    , regex-base                     ^>=0.94.0.2
    , regex-tdfa                     ^>=1.3.2.2
    , safe-exceptions                ^>=0.1.7.4
    , scheduler                      ^>=2.0.0.1
    , scientific                     ^>=0.3.8.0
    , semialign                      ^>=1.3.1
    , semigroupoids                  ^>=6.0.1
    , semigroups                     ^>=0.20
    , split                          ^>=0.2.5
    , splitmix                       ^>=0.1.1
    , StateVar                       ^>=1.2.2
    , stm                            ^>=2.5.3.1
    , storable-complex               ^>=0.2.3.0
    , storable-record                ^>=0.0.7
    , storable-tuple                 ^>=0.1
    , strict                         ^>=0.5.1
    , strict-lens                    ^>=0.4.1
    , tagged                         ^>=0.8.9
    , template-haskell               ^>=2.21.0.0
    , text                           ^>=2.1.1
    , tf-random                      ^>=0.5
    , th-abstraction                 ^>=0.7.1.0
    , these                          ^>=1.2.1
    , these-lens                     ^>=1.0.2
    , time                           ^>=1.12.2
    , transformers                   ^>=0.6.1.0
    , transformers-base              ^>=0.4.6
    , transformers-compat            ^>=0.7.2
    , trifecta                       ^>=2.1.4
    , unboxing-vector                ^>=0.2.0.0
    , unix                           ^>=2.8.6.0
    , unliftio-core                  ^>=0.2.1.0
    , unordered-containers           ^>=0.2.20
    , utf8-string                    ^>=1.0.2
    , utility-ht                     ^>=0.0.17.2
    , vector                         ^>=0.13.2.0
    , vector-algorithms              ^>=0.9.0.3
    , vector-split                   ^>=1.0.0.3
    , vector-stream                  ^>=0.1.0.1
    , vector-th-unbox                ^>=0.2.2
    , void                           ^>=0.7.3
    , wide-word                      ^>=0.1.6.0
    , witherable                     ^>=0.5
    , xhtml                          ^>=3000.2.2.1

  hs-source-dirs:   app
  default-language: GHC2021

  if flag(atcoder)
    cpp-options: -DATCODER
