cabal-version: 3.4
name:          submission
version:       0.1.0.0
synopsis:      A Haskell program submitted to AtCoder

-- description:
license:
author:        submitter-anonymous
maintainer:    NONE

-- copyright:
category:      Competitive
build-type:    Simple

-- extra-doc-files:    CHANGELOG.md
-- extra-source-files:
common warnings
  ghc-options: -Wall

flag atcoder
  description: Indicates this is on the AtCoder judge server
  default:     False
  manual:      True

executable main
  import:           warnings
  main-is:          Main.hs

  -- other-modules:
  -- other-extensions:
  build-depends:
    , Cabal
    , Cabal-syntax
    , QuickCheck
    , ac-library-hs                  ^>=1.5.0.0
    , adjunctions
    , array
    , attoparsec
    , base
    , bifunctors
    , binary
    , bitvec
    , bytestring
    , comonad
    , containers
    , contravariant
    , deepseq
    , directory
    , distributive
    , exceptions
    , extra
    , fgl
    , filepath
    , flow
    , free
    , ghc-bignum                     ==1.3
    , ghc-boot-th                    ==9.8.4
    , ghc-prim                       ^>=0.11.0
    , hashable
    , heaps
    , hmatrix
    , hmatrix-glpk
    , hmatrix-gsl
    , hmatrix-special
    , ilist
    , indexed-traversable
    , indexed-traversable-instances
    , integer-gmp
    , integer-logarithms
    , kan-extensions
    , lens
    , linear-base
    , list-t
    , massiv
    , megaparsec
    , monad-memo
    , mono-traversable
    , mtl
    , mutable-containers
    , mwc-random
    , parallel
    , parsec
    , parser-combinators
    , pretty
    , primitive
    , process
    , profunctors
    , psqueues
    , random
    , reflection
    , regex-tdfa
    , safe-exceptions
    , scientific
    , semialign
    , semigroupoids
    , split
    , stm
    , strict
    , strict-lens
    , tagged
    , template-haskell
    , text ^>=2.1.2
    , tf-random
    , these
    , these-lens
    , time
    , transformers
    , trifecta
    , unboxing-vector
    , unix
    , unordered-containers
    , utility-ht
    , vector
    , vector-algorithms
    , vector-split
    , vector-stream
    , vector-th-unbox
    , wide-word
    , witherable
    , xhtml

  hs-source-dirs:   app
  default-language: GHC2021

  if flag(atcoder)
    cpp-options: -DATCODER
